--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="background"></div>
     <div class="message">
       <p>Game Over !</p>
-      <p>Score : </p>
+      <p>Score : <span>0</span></p>
     <button>Try Again</button>
     </div>
   </div>
