--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="This is a simple memory card game">
-  <title>Flip card Game</title>
-  <link rel="stylesheet" href="/styles/style.css">
-</head>
-  <div class="section">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is a simple memory card game">
+    <title>Flip card Game</title>
+    <link rel="stylesheet" href="./style.css">
+  </head>
+
+  <body>
+  
+   <div class="section">
     <h1>Memory Game</h1>
     <div class="container">
       <div class="boxes "id="1" >
@@ -37,6 +40,6 @@
     <button>Try Again</button>
     </div>
   </div>
-  <script src="/scripts/app.js"></script>
+  <script src="/scripts/app.js"></script> 
 </body>
 </html>
